--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,10 @@
                     </div>
                     
                     <div class="self-introduction">
-                        <p>　早稲田大学政治経済学部卒業後、サンフランシスコへ留学し、語学学校へ通ったのち、現地のプログラミングブートキャンプにて主にJavaScriptによるフルスタックのWeb開発の学習をしました。留学中は自身の語学学習のみでなく、言語交流コミュニティを創設し、週に２回、日本語と英語で会話をするイベントを開催しておりました。<br>
-                        　私の強みは現状に満足せず、常に改善点がないかを模索し、周りを巻き込みながら解決する能力です。言語交流コミュニティは、「語学学校に通っているが会話の練習の機会が不十分である」という自分と同じ悩みを抱える人々の問題を解決することができないかと考え創設するに至りました。市内の日本語学校へ行き、生徒を勧誘することで日本語を学習したい外国人の参加者を増やすことができました。結果的に日本語学習者と英語学習者がほぼ同数所属する約150人をコミュニティを創り上げることができました。また、参加者全員が積極的に発言ができるような工夫を入れることで、高い満足度を得られることができました。<br>
-                        　留学を通して得られたことのうち、語学力やプログラミングの技術以上に大きな意味を持ったことは、自分が人生において成し遂げたいことが見つかったことです。それは「質の高い教育を誰でも受けられる世の中を創ること」です。<br>
-                        　国の発展を支えるのは人であり、優秀な人材を育成するためには、教育が受けられる環境が不可欠です。ところが世の中には、経済的な問題から十分な教育が受けられない人が多くいます。私は、テクノロジーによってこの問題を解決し、多くの人の人生に大きな影響を与える仕事がしたいと考えています。</p>
+                        <p class="my-name">栢森 威瑠   (Kayamori Takeru)</p>
+                        <p class="self-intro-main">　早稲田大学政治経済学部卒業後、サンフランシスコへ留学。約１年間 語学学校へ通った後、現地のプログラミングブートキャンプ、「General Assembly」にてWeb開発の学習をしました。また、サンフランシスコ市内で言語交流コミュニティを創設し、週に２回、日本語と英語で会話をするイベントを開催していました。<br>
+                        　新しいことを学ぶのが好きで、ブートキャンプ卒業後もReduxを独学で学習中です。Reduxの習得後はKotlinの勉強をしたいと考えています。<br> １年２ヶ月の留学を経て、私は教育という分野に興味を持つようになりました。教育は人々の人生や一国の発展にも大きな影響を与える重要な要因でありながら、日本を含む多くの国が問題を抱えています。私はテクノロジーによって、貧富の差に関わらず誰もが教育を受けられる世の中と、教育の質の向上を実現したいと考えています。
+                        </p>
                     </div>
                 </div>
             </div>
@@ -104,11 +104,11 @@
                 <div class="skills-wrap">
                     <div class="skills-content">
                         <p>> Front-end</p>
-                        <p>JavaScript, HTML, CSS</p>
+                        <p class="indent">JavaScript, HTML, CSS</p>
                         <p>> Back-end</p>
-                        <p>Node, Express, MongoDB</p>
+                        <p class="indent">Node, Express, MongoDB</p>
                         <p>> Others</p>
-                        <p>Git, GitHub, Sketch</p>
+                        <p class="indent">Git, GitHub, Sketch</p>
                     </div>
                     
                     <!-- <img class="skill-img" src="https://live.staticflickr.com/65535/48611905347_a3df4db956_h.jpg" alt="MacBookPro-img-cropped-screen"> -->
