--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,10 @@
             </div>
             <div class="header-right">
                 <ul>
-                        <li>About</li>
-                        <li>Projects</li>
-                        <li>Skills</li>
-                        <li>Contact</li>
+                        <li><a href="#section-a">About</a></li>
+                        <li><a href="#section-b">Projects</a></li>
+                        <li><a href="#section-c">Skills</a></li>
+                        <li><a href="#section-d">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
         <section id="section-a">
             <div class="content-wrap">
                 <div>
-                    <h1 class="section-title">About Me</h1>
+                    <h1 class="section-title">About</h1>
                 </div>
                 
                 <div class="profile-wrap"> <!-- grid -->
@@ -50,8 +50,8 @@
                     </div>
                     
                     <div class="self-introduction">
-                        <p class="my-name">栢森 威瑠   (Kayamori Takeru)</p>
-                        <p class="self-intro-main">　早稲田大学政治経済学部卒業後、サンフランシスコへ留学。約１年間 語学学校へ通った後、現地のプログラミングブートキャンプ、「General Assembly」にてWeb開発の学習をしました。また、サンフランシスコ市内で言語交流コミュニティを創設し、週に２回、日本語と英語で会話をするイベントを開催していました。<br>
+                        <p class="my-name japanese">栢森 威瑠   (Kayamori Takeru)</p>
+                        <p class="self-intro-main japanese">　早稲田大学政治経済学部卒業後、サンフランシスコへ留学。約１年間 語学学校へ通った後、現地のプログラミングブートキャンプ、「General Assembly」にてWeb開発の学習をしました。また、サンフランシスコ市内で言語交流コミュニティを創設し、週に２回、日本語と英語で会話をするイベントを開催していました。<br>
                         　新しいことを学ぶのが好きで、ブートキャンプ卒業後もReduxを独学で学習中です。Reduxの習得後はKotlinの勉強をしたいと考えています。<br> １年２ヶ月の留学を経て、私は教育という分野に興味を持つようになりました。教育は人々の人生や一国の発展にも大きな影響を与える重要な要因でありながら、日本を含む多くの国が問題を抱えています。私はテクノロジーによって、貧富の差に関わらず誰もが教育を受けられる世の中と、教育の質の向上を実現したいと考えています。
                         </p>
                     </div>
@@ -71,7 +71,7 @@
                             <div class="project">
                                 <h3>Explore</h3>
                                 <a href="https://explore-meetup-clone.herokuapp.com/"><img src="https://live.staticflickr.com/65535/48611788731_cd06d061b2_k.jpg" alt="project"></a>
-                                <p class="project-description">Meetupというコミュニティ運営プラットフォームサービスを真似て、作りました。ユーザーは自分でイベント開催情報を作成し、参加者を募集することができます。自分が開催するイベントや、参加するイベントはユーザーページから確認することができます。</p>
+                                <p class="project-description japanese">Meetupというコミュニティ運営プラットフォームサービスを真似て、作りました。ユーザーは自分でイベント開催情報を作成し、参加者を募集することができます。自分が開催するイベントや、参加するイベントはユーザーページから確認することができます。</p>
                                 <p>JavaScript / React / MongoDB /  Node / Express </p>
                                 <p class="project-link">
                                     <a href="https://explore-meetup-clone.herokuapp.com/">Demo</a>/
@@ -83,7 +83,7 @@
                             <div class="project">
                                 <h3>Movie Pal</h3>
                                 <a href="https://express-movie-pals.herokuapp.com/reviews/"><img src="https://live.staticflickr.com/65535/48611432698_89ac88fd7e_k.jpg" alt="project"></a>
-                                <p class="project-description">OMDbというオンラインデータベースのAPIを使用した映画レビューアプリケーション。コーディングブートキャンプ中のグループプロジェクトとして作成しました。ユーザーは映画タイトルを検索し、その映画のレビューを「ストーリー・音楽・演技・映像美」の４項目によって評価します。評価した映画はホームページに追加され、４項目の平均点がその映画の点数として表示されます。</p>
+                                <p class="project-description japanese">OMDbというオンラインデータベースのAPIを使用した映画レビューアプリケーション。コーディングブートキャンプ中のグループプロジェクトとして作成しました。ユーザーは映画タイトルを検索し、その映画のレビューを「ストーリー・音楽・演技・映像美」の４項目によって評価します。評価した映画はホームページに追加され、４項目の平均点がその映画の点数として表示されます。</p>
                                 <p>JavaScript / React / MongoDB /  Node / Express </p>
                                 <a href="https://express-movie-pals.herokuapp.com/reviews/">Demo</a>/
                                 <a href="https://git.generalassemb.ly/scott-mccormick/moviepals">Source Code</a>
@@ -104,7 +104,7 @@
                 <div class="skills-wrap">
                     <div class="skills-content">
                         <p>> Front-end</p>
-                        <p class="indent">JavaScript, HTML, CSS</p>
+                        <p class="indent">JavaScript, React, HTML/CSS, Bootstrap</p>
                         <p>> Back-end</p>
                         <p class="indent">Node, Express, MongoDB</p>
                         <p>> Others</p>
