--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
                                 <h3>Movie Pal</h3>
                                 <a href="https://express-movie-pals.herokuapp.com/reviews/"><img src="https://live.staticflickr.com/65535/48611432698_89ac88fd7e_k.jpg" alt="project"></a>
                                 <p class="project-description japanese">OMDbというオンラインデータベースのAPIを使用した映画レビューアプリケーション。コーディングブートキャンプ中のグループプロジェクトとして作成しました。ユーザーは映画タイトルを検索し、その映画のレビューを「ストーリー・音楽・演技・映像美」の４項目によって評価します。評価した映画はホームページに追加され、４項目の平均点がその映画の点数として表示されます。</p>
-                                <p>JavaScript / React / MongoDB /  Node / Express </p>
+                                <p>JavaScript / ejs / MongoDB /  Node / Express </p>
                                 <a href="https://express-movie-pals.herokuapp.com/reviews/">Demo</a>/
                                 <a href="https://git.generalassemb.ly/scott-mccormick/moviepals">Source Code</a>
                             </div>
