edit link for movie pal

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <div class="logo">
             <img src="https://i.ibb.co/KbyRP3f/tk-logo1.png" alt="tk-logo">
         </div>
-        <nav>
+        <nav id="nav">
             <ul class="nav-links">
                 <li id="nav-1">Home</li>
                 <li id="nav-2">About</li>
@@ -150,8 +150,8 @@
                                                 
                                             </ul>
                                             <ul class="project-bottom-right">
-                                                <li><a class="git" href="https://git.generalassemb.ly/Takeru/explore">GitHub</a></li>
-                                                <li><a class="heroku" href="https://explore-meetup-clone.herokuapp.com/">Heroku</a></li>
+                                                <li><a class="https://git.generalassemb.ly/scott-mccormick/moviepals">GitHub</a></li>
+                                                <li><a class="heroku" href="https://express-movie-pals.herokuapp.com/reviews/">Heroku</a></li>
                                             </ul>
                                         </div>
 
