modify class git

--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
                                                 
                                             </ul>
                                             <ul class="project-bottom-right">
-                                                <li><a class="https://git.generalassemb.ly/scott-mccormick/moviepals">GitHub</a></li>
+                                                <li><a class="git" href="https://git.generalassemb.ly/scott-mccormick/moviepals">GitHub</a></li>
                                                 <li><a class="heroku" href="https://express-movie-pals.herokuapp.com/reviews/">Heroku</a></li>
                                             </ul>
                                         </div>
